--- a/package.json
+++ b/package.json
@@ -4,15 +4,42 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "node_modules/.bin/ts-node -r tsconfig-paths/register src/index.ts"
+    "test": "jest",
+    "build": "node_modules/.bin/tsc",
+    "run:dev": "node_modules/.bin/ts-node -r tsconfig-paths/register src/bin/run.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.14.10",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "moduleNameMapper": {
+      "@app/(.*)": "<rootDir>/../src/$1"
+    },
+    "rootDir": "test",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  },
+  "_moduleAliases": {
+    "@app": "dist"
+  },
+  "dependencies": {
+    "module-alias": "^2.2.2"
   }
 }
