--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "jest",
     "build": "node_modules/.bin/tsc",
     "run:dev": "node_modules/.bin/ts-node -r tsconfig-paths/register src/bin/run.ts"
@@ -13,6 +14,10 @@
   "devDependencies": {
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
